[package]
name = "rust-egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Kita panggil langsung android-activity agar tidak bingung mencari di dalam eframe
android-activity = { version = "0.5", features = ["game-activity"] }
eframe = { version = "0.27", default-features = false, features = ["glow", "android-game-activity"] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
min_sdk_version = 21
target_sdk_version = 34
