[package]
name = "rust-egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.5", features = ["native-activity"] }
# Aktifkan semua fitur android yang mungkin dibutuhkan agar fungsi muncul di root
eframe = { version = "0.27", default-features = false, features = ["glow", "android-native-activity"] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
min_sdk_version = 21
target_sdk_version = 34
